feat: add Thornthwaite-Mather soil moisture functions

--- a/test/initial_tests.ipynb
+++ b/test/initial_tests.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import sys\n",
     "from pathlib import Path\n",
-    "sys.path.append(str(Path.cwd().parents[1]))"
+    "sys.path.append(str(Path.cwd().parents[0]))"
    ]
   },
   {
@@ -20,13 +20,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In module constants sys.path[0], __package__ == e:\\projects\\enterprise_capacity\\git\\pyswb\\pyswb\\test pyswb\n"
+      "In module constants sys.path[0], __package__ == e:\\projects\\enterprise_capacity\\git\\pyswb\\test pyswb\n"
      ]
     }
    ],
    "source": [
     "import pyswb.science_process.pet_hargreaves_samani as pet\n",
-    "import pyswb.science_process.runoff_curve_number as cn"
+    "import pyswb.science_process.runoff_curve_number as cn\n",
+    "import pyswb.science_process.actual_et_thornthwaite_mather as aet_tm"
    ]
   },
   {
@@ -68,37 +69,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5681186631618474\n"
+      "sm:   115.635\n",
+      "apwl: 190.000\n",
+      "sm:   87.395\n",
+      "apwl: 259.000\n",
+      "sm:   10.335\n",
+      "apwl: 20.000\n",
+      "sm:   54.367\n",
+      "apwl: 100.000\n"
      ]
     }
    ],
    "source": [
-    "print(runoff)"
+    "# from Thornthwaite-Mather table 30: a soil with water holding capacity of 250mm and a APWL of 190 should retain 116mm of water\n",
+    "sm = aet_tm.thornthwaite_mather_soil_moisture_millimeters(250, 190)\n",
+    "apwl = aet_tm.thornthwaite_mather_accumulated_potential_water_loss_millimeters(250,sm)\n",
+    "print(f'sm:   {sm:.3f}')\n",
+    "print(f'apwl: {apwl:.3f}')\n",
+    "\n",
+    "# from Thornthwaite-Mather table 30: a soil with water holding capacity of 250mm and a APWL of 259 should retain 87mm of water\n",
+    "sm = aet_tm.thornthwaite_mather_soil_moisture_millimeters(250, 259)\n",
+    "apwl = aet_tm.thornthwaite_mather_accumulated_potential_water_loss_millimeters(250,sm)\n",
+    "print(f'sm:   {sm:.3f}')\n",
+    "print(f'apwl: {apwl:.3f}')\n",
+    "\n",
+    "# from Thornthwaite-Mather table 23: a soil with water holding capacity of 25mm and a APWL of 20 should retain 10mm of water\n",
+    "sm = aet_tm.thornthwaite_mather_soil_moisture_millimeters(25,20)\n",
+    "apwl = aet_tm.thornthwaite_mather_accumulated_potential_water_loss_millimeters(25,sm)\n",
+    "print(f'sm:   {sm:.3f}')\n",
+    "print(f'apwl: {apwl:.3f}')\n",
+    "\n",
+    "# from Thornthwaite-Mather table 27: a soil with water holding capacity of 125mm and a APWL of 100 should retain 55mm of water\n",
+    "sm = aet_tm.thornthwaite_mather_soil_moisture_millimeters(125,100)\n",
+    "apwl = aet_tm.thornthwaite_mather_accumulated_potential_water_loss_millimeters(125,sm)\n",
+    "print(f'sm:   {sm:.3f}')\n",
+    "print(f'apwl: {apwl:.3f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(runoff)"
    ]
