feat: add root zone as storage object

--- a/test/manual_tests.ipynb
+++ b/test/manual_tests.ipynb
@@ -25,9 +25,9 @@
     }
    ],
    "source": [
-    "import pyswb.science_process.pet_hargreaves_samani as pet\n",
-    "import pyswb.science_process.runoff_curve_number as cn\n",
-    "import pyswb.science_process.actual_et_thornthwaite_mather as aet_tm"
+    "import pyswb.science_functions.pet_hargreaves_samani as pet\n",
+    "import pyswb.science_functions.runoff_curve_number as cn\n",
+    "import pyswb.science_functions.actual_et_thornthwaite_mather as aet_tm"
    ]
   },
   {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
